--- a/www/templates/iniciosesion.html
+++ b/www/templates/iniciosesion.html
@@ -1,7 +1,8 @@
-	<ion-content scroll="false">
 		<ion-view>
 		    <ion-content scroll="false">
+
 		        <section class="login-container">
+
 		            <div class = "col header text-center">
 		               <img src="./img/ionic.png" class = "logo full-image" />
 		            </div>
@@ -12,12 +13,13 @@
 		            <div class = "col button-row text-center">
 		               <img src="./img/email-button.png" ng-click="seleccion(2)" />
 		            </div>
-		            <div class = "col text-center">
-		                No tienes una cuenta? <strong><a href="#" ng-click="seleccion(1)">Crea una!</a></strong>
+		            <div class = "adicional col text-center">
+		                <p>Aun no tienes una cuenta?</p><strong><a href="#" ng-click="seleccion(1)">Crear cuenta</a></strong>
 		                <br>
 		                Olvide mi contraseña <strong><a href="#" ng-click="seleccion(3)">Restablecer</a></strong>
-		            </div>            
+		            </div>
+		                        
 		        </section>
+
 		    </ion-content>
 		</ion-view>
-	</ion-content>
