--- a/www/templates/promociones.html
+++ b/www/templates/promociones.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Galeria de Promociones">
-	<ion-content ng-controller="gallery">
-		<div class="list card">
+	<ion-content class="fondo" ng-controller="gallery">
+		<div class="list card transparent">
 			<ion-gallery ion-gallery-items="items" ion-gallery-row="2"  ion-zoom-events="false"></ion-gallery>
 		</div>
 	</ion-content>
