--- a/www/templates/frios.html
+++ b/www/templates/frios.html
@@ -1,9 +1,9 @@
 <ion-view view-title="Tés, Frappés, Helados y más">
-  <ion-content>
+  <ion-content class="fondo">
+
     <div ng-controller = "DataCtrl">
-      <div ng-repeat="items in frioData" class="list card">
-        <div class="list card">
-        
+      <div ng-repeat="items in frioData" class="list card transparent">
+        <div class="list card">        
           <div class="item item-divider">
             <span>{{items.Nombre}}</span>
             <p>{{items.Categoria}}</p>
@@ -15,11 +15,16 @@
               </p>
           </div>
         </div>
-        <button class="button button-positive" ng-click="addProducto(items.Precio,items.Nombre)"> 
-        <i class="ion-android-add-circle"></i>
-        {{items.Precio}}
-        </button>      
+        <div class="row">
+          <div class="col text-center">
+            <button class="button button-positive" ng-click="addProducto(items)"> 
+            <i class="ion-android-add-circle"></i>
+            ${{items.Precio}} Agregar
+            </button>
+          </div>
+        </div>  
       </div>
-    </div>  
+    </div>
+
   </ion-content>
 </ion-view>
