--- a/www/templates/restablecer.html
+++ b/www/templates/restablecer.html
@@ -1,24 +1,23 @@
-<ion-modal-view>
-  <ion-header-bar>
-    <h1 class="title">Restablecer contraseña</h1>
-    <div class="buttons">
-      <button class="button" ng-click="cerrar(3)">Cerrar</button>
-    </div>
+<ion-modal-view class="transparent">
+
+  <ion-header-bar class="transparent">
+    <h1 class="title titulo">Restablecer contraseña</h1>
+      <button class="button button-assertive" ng-click="cerrar(3)">Cerrar</button>
   </ion-header-bar>
-  <ion-content ng-controller="AuthCtrl">
+
+  <ion-content class="padding" ng-controller="AuthCtrl">
     <form ng-submit="passReset(reset.mail)">
-        <div>
-          <div class="list">
-            <label class="item item-input item-stacked-label">
+            <label class="item">
+              <p>Enviaremos un correo a la siguiente direccion:</p>
+            </label>
+            <label class="item item-input">
               <span class="input-label">Email</span>
               <input type="email" placeholder="shabbat@mail.com" ng-model="mail.correo">
-            </label>        
-          </div>        
+            </label>                
           <label class="item">
             <button class="button button-block button-assertive" type="submit" href="#">Reset Password</button>
-          </label>
-        </div>
-      </div>      
+          </label>      
     </form>
   </ion-content>
+
 </ion-modal-view>
