Arreglado el envio de datos al servidor

--- a/www/templates/comprar.html
+++ b/www/templates/comprar.html
@@ -82,7 +82,7 @@
 
         <!--<button class="centrar_btn button button-positive" id="pay-button" type="submit" value="Crear Tarjeta">-->
 
-          <button type="submit" id="pay-button" class="centrar_btn button button-positive" ng-click="envioPhp(frm)" >Crear Tarjeta</button>
+          <button type="submit" id="pay-button" class="centrar_btn button button-positive" ng-click="envioDatos(frm)" >Crear Tarjeta</button>
 
     </form>
 
