Arreglado el sistema de pagos

--- a/www/templates/comprar.html
+++ b/www/templates/comprar.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Comprar" class="padding">
-  <ion-content class="fondo" ng-controller="pagosCtrl">
+  <ion-content class="fondo">
 
     <div class="tarjetas">
 
@@ -15,12 +15,12 @@
 
     </div>
 
-    <form id="payment-form" name="payment-form" class="form" >
+    <form id="payment-form" name="payment-form" class="form" ng-controller="DataCtrl">
 
         <input type="hidden" name="token_id" ng-model="frm.token_id" id="token_id">
         <input type="hidden" name="deviceIdHiddenFieldName" ng-model="frm.deviceIdHiddenFieldName" id="deviceIdHiddenFieldName">
         <input type="hidden" name="use_card_points" id="use_card_points" value="false">
-
+        
         <div class="centrar">
           <label for="nombre" class="icon ion-person"></label>
           <input id="nombre" placeholder="Nombre(s)" ng-model="frm.name" data-openpay-card="name" size="50" type="text">
@@ -32,7 +32,7 @@
         </div>
 
         <div class="centrar">
-          <label for="nombre" class="icon ion-person"></label>
+          <label for="nombre" class="icon ion-iphone"></label>
           <input id="nombre" placeholder="Telefono" ng-model="frm.phone_number" data-openpay-card="phone_number" size="50" type="text">
         </div>
 
@@ -41,13 +41,17 @@
           <input id="nombre" placeholder="Descripción" ng-model="frm.description" data-openpay-card="description" size="50" type="text">
         </div>
 
-        <div class="centrar">
-          <label for="nombre" class="icon ion-person"></label>
-          <input id="nombre" placeholder="Importe" ng-model="frm.amount" data-openpay-card="amount" size="50" type="text">
-        </div>
+        <!--IMPORTE-->
 
         <div class="centrar">
-          <label for="nombre" class="icon ion-person"></label>
+          <label for="nombre" class="icon ion-cash"></label>
+          <input id="nombre" Placeholder="Importe: {{totalProduct(showItems)}}" ng-model="frm.amount = totalProduct(showItems)" data-openpay-card="amount" size="50" type="text" disabled>
+        </div>
+
+        <!--FIN DE IMPORTE-->
+
+        <div class="centrar">
+          <label for="nombre" class="icon ion-email"></label>
           <input id="nombre" placeholder="Email" ng-model="frm.email" data-openpay-card="email" size="50" type="text">
         </div>
 
@@ -68,7 +72,7 @@
           </div>
 
           <div class="exp_month">
-            <label id="mes_exp"></label>
+            <label id="mes_exp" class="icon ion-android-calendar"></label>
             <input id="mes_exp" placeholder="Mes de expiracion" ng-model="frm.expiration_month" data-openpay-card="expiration_month" size="4" type="text">
           </div>
         </div>
@@ -79,10 +83,11 @@
           <label for="security" class="icon ion-locked"></label>
           <input id="security" placeholder="Codigo de seguridad(3 digitos)" ng-model="frm.cvv2" data-openpay-card="cvv2" size="5" type="text">
         </div>
-
-        <!--<button class="centrar_btn button button-positive" id="pay-button" type="submit" value="Crear Tarjeta">-->
-
-          <button type="submit" id="pay-button" class="centrar_btn button button-positive" ng-click="envioDatos(frm)" >Crear Tarjeta</button>
+        
+        <!--ENVIO DE DATOS DEL FORMULARIO-->
+        <div ng-controller="pagosCtrl">
+          <button type="submit" id="pay-button" class="centrar_btn button button-positive"  >Crear Cargo</button>
+        </div>  
 
     </form>
 
