agregando inicio de sesion con fb

--- a/www/templates/principal.html
+++ b/www/templates/principal.html
@@ -12,7 +12,7 @@
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu side="left" class="transparent">
+  <ion-side-menu side="left" class="transparent">   
     <ion-header-bar class="bar-stable">
       <h1 class="title">Menu</h1>
     </ion-header-bar>
@@ -51,6 +51,9 @@
           Cerrar Sesión
         </ion-item>        
       </ion-list>
+      <div id="usersFb">
+        
+      </div>
     </ion-content>
   </ion-side-menu>
 </ion-side-menus>
