Cambios en el rendereo de la aplicacion

--- a/www/templates/principal.html
+++ b/www/templates/principal.html
@@ -51,8 +51,8 @@
           Cerrar Sesión
         </ion-item>        
       </ion-list>
-      <div id="usersFb">
-        
+      <div id="usersFb" ng-controller="AuthCtrl">
+          
       </div>
     </ion-content>
   </ion-side-menu>
